<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialogNameTextView"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/textName"
            android:textAlignment="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/dialogItemNameEditText"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:inputType="text"
            android:maxLines="1"
            android:textAlignment="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialogNameTextView" />

        <TextView
            android:id="@+id/dialogPriceTextView"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="7dp"
            android:text="@string/unitPrice"
            android:textAlignment="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/dialogAmountTextView"
            app:layout_constraintTop_toBottomOf="@+id/dialogItemNameEditText" />

        <EditText
            android:text="0"
            android:id="@+id/dialogItemPriceEditText"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="0dp"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/dialogItemAmountEditText"
            app:layout_constraintTop_toBottomOf="@+id/dialogPriceTextView" />

        <TextView
            android:id="@+id/dialogAmountTextView"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="@string/amount"
            android:textAlignment="center"
            app:layout_constraintBaseline_toBaselineOf="@+id/dialogPriceTextView"
            app:layout_constraintLeft_toRightOf="@+id/dialogPriceTextView"
            app:layout_constraintRight_toRightOf="parent" />

        <EditText
            android:id="@+id/dialogItemAmountEditText"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:inputType="number"
            android:text="1"
            android:textAlignment="center"
            app:layout_constraintBaseline_toBaselineOf="@+id/dialogItemPriceEditText"
            app:layout_constraintLeft_toRightOf="@+id/dialogItemPriceEditText"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/dialogEuroTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textEuro"
            app:layout_constraintBaseline_toBaselineOf="@+id/dialogItemPriceEditText"
            app:layout_constraintLeft_toRightOf="@+id/dialogItemPriceEditText"
            android:layout_marginLeft="0dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pcs"
            app:layout_constraintLeft_toRightOf="@+id/dialogItemAmountEditText"
            android:layout_marginLeft="0dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/dialogItemAmountEditText" />
    </android.support.constraint.ConstraintLayout>

</ScrollView>