<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.fakero.shoppingassistant.ShoppingListFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addNewShoppingListItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        app:backgroundTint="@color/colorPrimary"
        app:srcCompat="@android:drawable/ic_input_add"
        android:layout_marginRight="45dp"
        android:layout_marginBottom="40dp" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/shoppingCartTotalEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:clickable="false"
            android:focusable="false"
            android:minWidth="80dp"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/shoppingListListView"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/shoppingCartEmptyButton"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/shoppingCartEmptyButton"
            style="@android:style/Widget.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/btnEmptyCart"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ListView
            android:id="@+id/shoppingListListView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoppingCartEmptyButton"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="@string/cart"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoppingCartTotalEditText"
            app:layout_constraintRight_toLeftOf="@+id/shoppingCartTotalEditText"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/cartEuroTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textEuro"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoppingCartTotalEditText"
            app:layout_constraintLeft_toRightOf="@+id/shoppingCartTotalEditText" />
    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>